# WinHKMon

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  NETWORK_FIX.md  README.md  SPEC_UPDATE_SUMMARY.md
.github/: RELEASE_GUIDE.md
.github/workflows/: README.md  ci.yml  release.yml
.specify/features/winhkmon-system-resource-monitoring/: PHASE5_IMPLEMENTATION_GUIDE.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/features/winhkmon-system-resource-monitoring/checklists/: requirements.md
.specify/features/winhkmon-system-resource-monitoring/contracts/: cli-interface.md
.specify/features/winhkmon-system-resource-monitoring/research/: temperature-monitoring.md
.specify/features/winhkmon-system-resource-monitoring/specs/: data-model.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh
.specify/templates/: plan-template.md  spec-template.md
cmake/: TempMonitorConfig.cmake
docs/: DISK_IO_DIAGNOSTIC.md  DISK_IO_SEPARATION.md  NETWORK_FIX.md  RELEASE_WORKFLOW.md
include/WinHKMonLib/: CliParser.h  CpuMonitor.h  DeltaCalculator.h  DiskMonitor.h  MemoryMonitor.h  NetworkMonitor.h  OutputFormatter.h  StateManager.h  TempMonitor.h  Types.h
lib/: README.md
scripts/: build-with-temp-monitor.bat
src/WinHKMon/: main.cpp
src/WinHKMonLib/: CliParser.cpp  CpuMonitor.cpp  DeltaCalculator.cpp  DiskMonitor.cpp  MemoryMonitor.cpp  NetworkMonitor.cpp  OutputFormatter.cpp  StateManager.cpp  TempMonitor.cpp
tests/: CMakeLists.txt  CliParserTest.cpp  CpuMonitorTest.cpp  DeltaCalculatorTest.cpp  DiskMonitorTest.cpp  MemoryMonitorTest.cpp  NetworkMonitorTest.cpp  OutputFormatterTest.cpp  SampleTest.cpp  StateManagerTest.cpp  TempMonitorTest.cpp
